# purefsm

./: .clang-format  .editorconfig  .gitmodules  CMakeLists.txt  README.md  annotated.html  bug.html  classes.html  classpure_1_1empty__logger.html  classpure_1_1state__machine.html  classpure_1_1stdout__logger.html  classpure_1_1user__logger.html  dir_431ebe1bc4f78a059c6c70d54c224276.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_e68e8157741866f444e17edd764ebbae.html  files.html  fsm_8hpp.html  fsm_8hpp__incl.map  fsm_8hpp__incl.md5  fsm_8hpp_source.html  fsm_logger.html  functions.html  functions_func.html  functions_type.html  graph_legend.html  hierarchy.html  index.html  inherit_graph_0.map  inherit_graph_0.md5  inherit_graph_1.map  inherit_graph_1.md5  inherit_graph_2.map  inherit_graph_2.md5  inherit_graph_3.map  inherit_graph_3.md5  inherit_graph_4.map  inherit_graph_4.md5  inherit_graph_5.map  inherit_graph_5.md5  inherit_graph_6.map  (+27 more)
.github/workflows/: clang.yml  docs.yml  gcc.yml
doc/: CMakeLists.txt  Doxyfile.in  DoxygenLayout.xml  doc.cpp  footer.html  header.html  mainpage.md  style.css
include/: fsm.hpp  logger.hpp
include/pure/: fsm.hpp  logger.hpp
search/: all_0.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  files_0.js  files_1.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  namespaces_0.js  pages_0.js  pages_1.js  pages_2.js  pages_3.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js
test/: CMakeLists.txt  guard_test.cpp  test1.cpp  test2.cpp  test3.cpp  test_logic_guards.cpp  test_on_event_action.cpp
