project(PureFSMDoc)

find_package(Doxygen REQUIRED)
find_program(CLANG clang)

set(DOXYGEN_IN ${CMAKE_CURRENT_SOURCE_DIR}/Doxyfile.in)
set(DOXYGEN_OUT ${CMAKE_CURRENT_BINARY_DIR}/Doxyfile)

set(DOC_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})

set(DOXYGEN_MDFILE ${DOC_DIRECTORY}/mainpage.md)
set(INPUT_DIRS
    ${CMAKE_SOURCE_DIR}/include/pure
    ${DOC_DIRECTORY}
    ${DOXYGEN_MDFILE})
string(REPLACE ";" " " INPUT_DIRS_STR "${INPUT_DIRS}")

set(DOXYGEN_PROJECT_NAME        "PureFSM")
set(DOXYGEN_PROJECT_VERSION)
set(DOXYGEN_DOC_DIR             ${CMAKE_CURRENT_SOURCE_DIR})
set(DOXYGEN_OUTPUT_DIR          ${CMAKE_CURRENT_BINARY_DIR})
set(DOXYGEN_INPUT               ${INPUT_DIRS_STR})
set(DOXYGEN_EXAMPLE_PATH        ${CMAKE_SOURCE_DIR}/examples)
set(DOXYGEN_EXCLUDE_PATTERNS    CMakeLists.txt *.md)
set(DOXYGEN_EXCLUDE_SYMBOLS     __details)
set(DOXYGEN_HTML_HEADER         ${CMAKE_CURRENT_SOURCE_DIR}/header.html)
set(DOXYGEN_HTML_FOOTER         ${CMAKE_CURRENT_SOURCE_DIR}/footer.html)
set(DOXYGEN_STYLESHEET          ${CMAKE_CURRENT_SOURCE_DIR}/style.css)
set(DOXYGEN_LAYOUT              ${CMAKE_CURRENT_SOURCE_DIR}/DoxygenLayout.xml)

if(CLANG)
    set(DOXYGEN_CLANG_ASSISTED_PARSING YES)
    set(DOXYGEN_CLANG_DATABASE_PATH ${CMAKE_BINARY_DIR})
    set(DOXYGEN_CLANG_OPTIONS -Wdocumentation)
else()
    set(DOXYGEN_CLANG_ASSISTED_PARSING NO)
endif()

configure_file(${DOXYGEN_IN} ${DOXYGEN_OUT} @ONLY)

add_custom_target(GenerateDoxygen ALL
    COMMAND ${DOXYGEN_EXECUTABLE} ${DOXYGEN_OUT}
    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}
    VERBATIM
    USES_TERMINAL
)
